--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ html, body {
   cursor: pointer;
   line-height: 18px;
 }
-.items {
+.items, .trainerinfo {
   overflow-y: scroll;
   overflow-x: hidden;
   height: 80vh; 
