--- a/css/main.css
+++ b/css/main.css
@@ -292,3 +292,11 @@ span.move-type {
   -ms-user-select: none;
   user-select: none;
 }
+span.favorite {
+  position: absolute;
+  top: 10px;
+  right: 20%;
+}
+.favorite img {
+  height: 20px;
+}
