--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,31 @@ html, body {
 .log-date {
   color: #666;
 }
+
+
+#event-panel {
+  display: none;
+  position: fixed;
+  height: 50vh;
+  width: 660px;
+  z-index: 5;
+  left: 10px;
+  bottom: 10px;
+}
+#event-panel .card {
+  overflow-y: scroll;
+  height: 100%;
+  margin: 0;
+}
+.event-item {
+  padding: .3em 0 .3em 0;
+  font-size: 14px;
+}
+.event-date {
+  color: #666;
+}
+
+
 .bot-0 {
   background-color: #A93226 !important;
 }
