--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ html, body {
   position: fixed;
   height: 50vh;
   width: 660px;
-  z-index: 5;
+  z-index: 4;
   left: 680px;
   bottom: 10px;
 }
@@ -162,9 +162,10 @@ html, body {
 
 #events-panel {
   position: fixed;
-  height: 50vh;
-  width: 660px;
-  z-index: 5;
+  height: 30vh;
+  /*width: 660px;*/
+  width: 90%;
+  z-index: 4;
   left: 10px;
   bottom: 10px;
 }
@@ -347,3 +348,18 @@ span.favorite {
 .favorite img {
   height: 20px;
 }
+
+.side-nav li {
+    line-height: 20px;
+}
+
+.side-nav a.btn {
+    margin: 0px 0px;
+}
+
+.side-nav a {
+    font-size: 12px;
+    height: 32px;
+    line-height: 32px;
+}
+
