--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,10 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 #map {
-  height: 100%;
+  height: 100%
 }
 #menu {
   position: fixed;
@@ -373,8 +374,6 @@ span.favorite {
     line-height: 32px;
 }
 
-
-
 header, main, footer, #map, #events-panel {
    left: 210px;
 }
@@ -386,12 +385,23 @@ header, main, footer, #map, #events-panel {
 }
 
 #UI-Title {
-   padding-left: 190px;
+  margin: auto;
+  margin-left: 0px;
 }
 
+.page-title-container{
+  display: none;
+  height: 40px;
+  margin-left: 215px;
+}
 
-@media only screen and (max-width : 992px) {
-      #UI-Title {
-    padding-left: 0px;
-    }
+@media only screen and (max-width : 992px) {  
+  .page-title-container{
+    display: flex;
+    margin-left: 0px;
+  }
+
+  #map {
+    height: calc(100% - 40px);
+  }
 }
